07_retirement/grade.txt
Grading at Wed Nov 13 06:57:38 UTC 2019
Attempting to compile retirement.c
retirement.c:10:24: error: expected declaration specifiers or ‘...’ before ‘retire_info’
 double  monthly_change(retire_info info, double balance){
                        ^
retirement.c:18:4: error: expected declaration specifiers or ‘...’ before ‘retire_info’
    retire_info working, //info about working
    ^
retirement.c:19:4: error: expected declaration specifiers or ‘...’ before ‘retire_info’
    retire_info retired) //info about being retired
    ^
retirement.c: In function ‘main’:
retirement.c:46:3: error: statement with no effect [-Werror=unused-value]
   retire_info working, retired;
   ^
retirement.c:46:15: error: expected ‘;’ before ‘working’
   retire_info working, retired;
               ^
retirement.c:50:3: error: ‘working’ undeclared (first use in this function)
   working.months = 489;
   ^
retirement.c:50:3: note: each undeclared identifier is reported only once for each function it appears in
retirement.c:54:3: error: ‘retired’ undeclared (first use in this function)
   retired.months = 384;
   ^
retirement.c:58:3: error: implicit declaration of function ‘retirement’ [-Werror=implicit-function-declaration]
   retirement(startAge, initial, working, retired);
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
